fixed search home spacing issue

--- a/app/assets/sass/_forms.scss
+++ b/app/assets/sass/_forms.scss
@@ -80,6 +80,11 @@ input[type=file]{
     }
 }
 
+input.form-control{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
 .form-control{
     width: 100% !important;
     height: 45px;
@@ -90,9 +95,6 @@ input[type=file]{
     box-shadow:none;
     font-size:19px;
     padding:5px !important;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
 
     @media (min-width: 641px) {
         width:50% !important;
