--- a/app/assets/sass/_hero-lcc.scss
+++ b/app/assets/sass/_hero-lcc.scss
@@ -113,6 +113,7 @@
                             font-size:16px;
                             width:100% !important;
                             border:0 !important;
+                            padding: 6px 12px !important;
 
                             @media (min-width: 767px) {
                                 padding-left:60px !important;
